--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
 <style>
 p {
   text-align: center;
@@ -10,16 +12,25 @@ p {
   color: #707555;
 }body {
   text-align: center;
-  background-image: url("https://cdn.discordapp.com/attachments/633326400715227156/852390724639916062/Jai2.jpg");
+  background-image: url("https://cdn.discordapp.com/attachments/633326400715227156/852411968504463411/Jai2.jpg");
   background-repeat: no-repeat;
   background-position-x: center;
   background-color: #707555;
   
 }
+h1{
+  font-family: 'Tangerine', cursive;
+  font-size: 110px;
+  color: #707555;
+}
 </style>
 </head>
 <body>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<h1>Jai & Deepali</h1>
+
+<br>
 <p id="demo"></p>
 
 <script>
