--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@ h1{
   font-size: 110px;
   color: #707555;
 }
+@media only screen and (max-width: 768px) {
+  body {
+    background-color: #e5d3bd;
+  }
+}
 </style>
 </head>
 <body>
