--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ h1{
   </div>
 
   <div id="livestream" class="hidden">
-    <iframe id="stream" src="https://www.youtube.com/embed/kQouBl3UMlY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe id="stream" src="https://youtu.be/I7ututApz1s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 
   <script>
